update few more example